--- a/views/en/collection_id.pug
+++ b/views/en/collection_id.pug
@@ -72,32 +72,15 @@ html(lang='en')
                         a.right.carousel-control(href='#myCarousel', data-slide='next')
                             span.glyphicon.glyphicon-chevron-right
                             span.sr-only Next
-
-                        //.portfolio-info
-                        //    h3= collection.name_en
-                        //    ul
-                        //        li
-                        //            strong Каталог
-                        //            | : #{product.name_en}
-                        //        li
-                        //            strong Client
-                        //            | : 100+
-                        //        li
-                        //            strong  date
-                        //            | : 01 March, 2020
-                        //        li
-                        //            strong Nimadir qo`shamizasdasdasdasdasd
-                        //            | :
-                        //            a(href='#') :)
                     .portfolio-description
-                        h2 This is an example of portfolio detail
-                        p
+                        h1.size Sizes
+                        p.collectionRow
                             | #{collection.allItems_en}
         
         footer#footer
             .container
                 h3 Mazzo
-                //p |Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.
+                p Our social media
                 .social-links
                     a.telegram(href='https://t.me/Mazzo_lux_postel')
                         i.bx.bxl-telegram
