--- a/views/en/index.pug
+++ b/views/en/index.pug
@@ -1,6 +1,7 @@
 extends ../layout
 block content
 
+
 	header#header.fixed-top.d-flex.align-items-center
 		.container.d-flex.align-items-center
 			.logo.mr-auto
@@ -168,101 +169,43 @@ block content
 					p What we've done
 				ul#portfolio-flters.d-flex.justify-content-end(data-aos='fade-up')
 					li.filter-active(data-filter='*') All
-					li(data-filter='.filter-app') Satin
-					li(data-filter='.filter-card') Poplin
-					li(data-filter='.filter-web') Chintz
+					li(data-filter='.filter-app') #{products[0].name_en}
+					li(data-filter='.filter-card') #{products[1].name_en}
+					li(data-filter='.filter-web') #{products[2].name_en}
 				.row.portfolio-container(data-aos='fade-up')
-
-					.col-lg-4.col-md-6.portfolio-item.filter-web
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
-						.portfolio-info
-							h4 Chintz 2
-							p Chintz
-							a.venobox.preview-link(href='/images/portfolio/portfolio-4.jpg', data-gall='portfolioGallery', title='Web 2')
-								i.bx.bx-plus
-							a.details-link(href='portfolio-details.html', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-web
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-9.jpg', alt='')
-						.portfolio-info
-							h4 Chintz 1
-							p Chintz
-							a.venobox.preview-link(href='/images/portfolio/portfolio-9.jpg', data-gall='portfolioGallery', title='Web 3')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-web
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-7.jpg', alt='')
-						.portfolio-info
-							h4 Chintz 3
-							p Chintz
-							a.venobox.preview-link(href='/images/portfolio/portfolio-7.jpg', data-gall='portfolioGallery', title='Web 3')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-app
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-3.jpg', alt='')
-						.portfolio-info
-							h4 Satin 2
-							p Satin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-3.jpg', data-gall='portfolioGallery', title='App 2')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-app
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-2.jpg', alt='')
-						.portfolio-info
-							h4 Satin 3
-							p Satin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-2.jpg', data-gall='portfolioGallery', title='App 3')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-app
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-1.JPG', alt='')
-						.portfolio-info
-							h4 Satin 1
-							p Satin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-1.jpg', data-gall='portfolioGallery', title='App 1')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-card
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-4.jpg', alt='')
-						.portfolio-info
-							h4 Poplin 2
-							p Poplin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-4.jpg', data-gall='portfolioGallery', title='Card 2')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-card
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-6.jpg', alt='')
-						.portfolio-info
-							h4 Poplin 1
-							p Poplin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-6.jpg', data-gall='portfolioGallery', title='Card 1')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
-					.col-lg-4.col-md-6.portfolio-item.filter-card
-						.portfolio-img
-							img.img-fluid(src='/images/portfolio/portfolio-5.jpg', alt='')
-						.portfolio-info
-							h4 Poplin 3
-							p Poplin
-							a.venobox.preview-link(href='/images/portfolio/portfolio-5.jpg', data-gall='portfolioGallery', title='Card 3')
-								i.bx.bx-plus
-							a.details-link(href='/portfolio-details', title='More Details')
-								i.bx.bx-link
+					each collection,index in collections[0]
+						.col-lg-4.col-md-6.portfolio-item.filter-app
+							.portfolio-img
+								img.img-fluid(src=collection.imgs[0].url.replace('public',''), alt=collection.imgs[0].url.replace('public',''))
+							.portfolio-info
+								h4=products[0].name_en
+								p=collection.name_en
+								a.venobox.preview-link(href=collection.imgs[0].url.replace('public',''), data-gall='portfolioGallery', title='App 1')
+									i.bx.bx-plus
+								a.details-link(href='/en/collection/' + collection._id, title='More Details')
+									i.bx.bx-link
+					each collection,index in collections[1]
+						.col-lg-4.col-md-6.portfolio-item.filter-card
+							.portfolio-img
+								img.img-fluid(src=collection.imgs[0].url.replace('public', ''), alt=collection.imgs[0].url.replace('public', ''))
+							.portfolio-info
+								h4=products[0].name_en
+								p=collection.name_en
+								a.venobox.preview-link(href=collection.imgs[0].url.replace('public', ''), data-gall='portfolioGallery', title='App 1')
+									i.bx.bx-plus
+								a.details-link(href='/en/collection/'+collection._id, title='More Details')
+									i.bx.bx-link
+					each collection,index in collections[2]
+						.col-lg-4.col-md-6.portfolio-item.filter-card
+							.portfolio-img
+								img.img-fluid(src=collection.imgs[0].url.replace('public', ''), alt=collection.imgs[0].url.replace('public', ''))
+							.portfolio-info
+								h4=products[0].name_en
+								p=collection.name_en
+								a.venobox.preview-link(href=collection.imgs[0].url.replace('public', ''), data-gall='portfolioGallery', title='App 1')
+									i.bx.bx-plus
+								a.details-link(href='/en/collection/' + collection._id, title='More Details')
+									i.bx.bx-link
 
 					// End Portfolio Section
 					// ======= Testimonials Section =======
