--- a/views/ru/index.pug
+++ b/views/ru/index.pug
@@ -162,6 +162,7 @@ block content
 					h2 Portfolio
 					p What we've done
 				ul#portfolio-flters.d-flex.justify-content-end(data-aos='fade-up')
+
 					li.filter-active(data-filter='*') ВСЁ
 					li(data-filter='.filter-app') #{products[0].name_ru}
 					li(data-filter='.filter-card') #{products[1].name_ru}
@@ -200,9 +201,9 @@ block content
 									i.bx.bx-plus
 								a.details-link(href='/en/collection/' + collection._id, title='More Details')
 									i.bx.bx-link
-
-					// End Portfolio Section
-					// ======= Testimonials Section =======
+				//
+				//	// End Portfolio Section
+				//	// ======= Testimonials Section =======
 		//section#testimonials.testimonials
 		//	.container
 		//		.section-title(data-aos='zoom-out')
