--- a/views/admin/collection/create.pug
+++ b/views/admin/collection/create.pug
@@ -23,7 +23,7 @@ block content
             .form-group
                 label.control-label.col-sm-4(for='price') Narxi:
                 .col-sm-9
-                    input#price.form-control(type='number',required name='price' placeholder='to`plam narxini kiriting')
+                    input#price.form-control(type='text',required name='price' placeholder='to`plam narxini kiriting')
             .form-group
                 label.control-label.col-sm-4(for='katalog') Katalogni tanlang:
                 .col-sm-9
