--- a/views/admin/collection/update.pug
+++ b/views/admin/collection/update.pug
@@ -24,7 +24,7 @@ block content
             .form-group
                 label.control-label.col-sm-4(for='price') Narxi:
                 .col-sm-9
-                    input#price.form-control(type='number',required name='price' value= collection.price  placeholder='to`plam narxini kiriting')
+                    input#price.form-control(type='text',required name='price' value= collection.price  placeholder='to`plam narxini kiriting')
             
             input(type="hidden" name='token' value= token)
             br
