--- a/views/en/katalog.pug
+++ b/views/en/katalog.pug
@@ -65,7 +65,7 @@ block content
                                                                     h3
                                                                          a(href='/en/collection/'+ collection._id)= collection.name_en
                                                                     .product-price
-                                                                        span #{collection.price} сум
+                                                                        span #{collection.price} $
     footer#footer
         .container
             h3 Mazzo
