--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,8 @@ html(lang='en')
     link(href='/vendor/remixicon/remixicon.css', rel='stylesheet')
     link(href='/vendor/line-awesome/css/line-awesome.min.css', rel='stylesheet')
     link(href='/vendor/venobox/venobox.css', rel='stylesheet')
-    link(href='/vendor/owl.carousel/assets/owl.carousel.min.css', rel='stylesheet')
-    link(href='/vendor/aos/aos.css', rel='stylesheet')
+    //link(href='/vendor/owl.carousel/assets/owl.carousel.min.css', rel='stylesheet')
+    link(href='/vendor/aos/aos.css', rel='stylesheet')  
     // Template Main CSS File
     link(href='/stylesheets/style.css', rel='stylesheet')
     link(href='/stylesheets/main.css', rel='stylesheet')
