--- a/views/ru/katalog.pug
+++ b/views/ru/katalog.pug
@@ -5,7 +5,7 @@ block content
         .container.d-flex.align-items-center
             .logo.mr-auto
                 h1.text-light
-                    a(href='/ru') Маззо
+                    a(href='/ru') Mazzo
             nav.nav-menu.d-none.d-lg-block
                 ul
                     li.active
@@ -65,7 +65,7 @@ block content
                                                                     h3
                                                                          a(href='/ru/collection/'+ collection._id)= collection.name_ru
                                                                     .product-price
-                                                                        span #{collection.price} сум
+                                                                        span #{collection.price} $
     footer#footer
         .container
             h3 Mazzo
